# Python_term2_lab1

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: error_types.py  log_and_print.py  main.py
src/constants/: main_constants.py  source_constants.py
src/contracts/: task.py  task_source.py
src/sources/: file_source.py  generator_source.py  stdin_source.py
src/task_types/: base_task.py  stdin_task.py
tests/: main_test.py
tests/sources_tests/: file_source_test.py  generator_source_test.py  stdin_source_test.py
tests/task_types_tests/: base_task_test.py  stdin_task_test.py
